RESOLVED FIXED57101
Web Inspector: [Chromium] DevTools shows two resources for each plugin resource loaded
https://bugs.webkit.org/show_bug.cgi?id=57101
Summary Web Inspector: [Chromium] DevTools shows two resources for each plugin resour...
Vsevolod Vlasov
Reported 2011-03-25 06:42:30 PDT
http://code.google.com/p/chromium/issues/detail?id=77393 What steps will reproduce the problem? 1. Open site with <embed src="foo.swf"></embed> 2. Open DevTools network panel What is the expected output? foo.swf shown once. What do you see instead? Two foo.swf resources.
Attachments
Patch (5.33 KB, patch)
2011-03-25 09:24 PDT, Vsevolod Vlasov
pfeldman: review-
Patch (5.29 KB, patch)
2011-03-29 07:08 PDT, Vsevolod Vlasov
no flags
Vsevolod Vlasov
Comment 1 2011-03-25 09:24:05 PDT
Pavel Feldman
Comment 2 2011-03-25 09:52:55 PDT
WebKit Review Bot
Comment 3 2011-03-27 13:31:23 PDT
Vsevolod Vlasov
Comment 4 2011-03-29 07:08:16 PDT
Created attachment 87311 [details] Patch This could be landed now that DEPS was rolled to 79592.
WebKit Commit Bot
Comment 5 2011-03-29 08:07:35 PDT
Comment on attachment 87311 [details] Patch Clearing flags on attachment: 87311 Committed r82251: <http://trac.webkit.org/changeset/82251>
WebKit Commit Bot
Comment 6 2011-03-29 08:07:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.