2011-03-29  Vsevolod Vlasov  <vsevik@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: [Chromium] DevTools shows two resources for each plugin resource loaded
        https://bugs.webkit.org/show_bug.cgi?id=57101

        Remove DevToolsAgent network callbacks as this information is now available through ResourceLoader

        * public/WebDevToolsAgent.h:
        * src/WebDevToolsAgentImpl.cpp:
        * src/WebDevToolsAgentImpl.h:

Canonical link: https://commits.webkit.org/72053@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82251 268f45cc-cd09-0410-ab3c-d52691b4dbfc