Source/WebKit/chromium/public/WebDevToolsAgent.h
@@ -88,16 +88,6 @@ public:
     // Installs dispatch handle that is going to be called periodically
     // while on a breakpoint.
     WEBKIT_API static void setMessageLoopDispatchHandler(MessageLoopDispatchHandler);
-
-    // FIXME: remove once not used downstream.
-    virtual void identifierForInitialRequest(unsigned long resourceId, WebFrame*, const WebURLRequest&) = 0;
-    virtual void willSendRequest(unsigned long resourceId, WebURLRequest&) = 0;
-
-    virtual void willSendRequest(unsigned long resourceId, WebFrame*, WebURLRequest&) = 0;
-    virtual void didReceiveData(unsigned long resourceId, int length) = 0;
-    virtual void didReceiveResponse(unsigned long resourceId, const WebURLResponse&) = 0;
-    virtual void didFinishLoading(unsigned long resourceId) = 0;
-    virtual void didFailLoading(unsigned long resourceId, const WebURLError&) = 0;
 };
 
 } // namespace WebKit
